# regexr

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  jit.yml  release.yml  test.yml
benches/: .gitignore  QUICKSTART.md  README.md  RESULTS_GUIDE.md  SUMMARY.md  competitors.rs  requirements.txt  run_benchmarks.sh  visualize_results.py
benches/utils/: test_data.rs
data/unicode_tables/: age.rs  case_folding_simple.rs  general_category.rs  grapheme_cluster_break.rs  mod.rs  perl_decimal.rs  perl_space.rs  perl_word.rs  property_bool.rs  property_names.rs  property_values.rs  script.rs  script_extension.rs  sentence_break.rs  word_break.rs
docs/: architecture.md  engine_structure.md  features.md
examples/: bench_compare.rs  profile_cl100k.rs
scripts/: generate_unicode.py  update_unicode_tables.sh
src/: error.rs  lib.rs
src/dfa/: mod.rs
src/engine/: executor.rs  mod.rs  selector.rs
src/hir/: builder.rs  mod.rs  prefix_opt.rs  unicode.rs  unicode_data.rs
src/jit/: aarch64.rs  calling_convention.rs  codegen.rs  codegen_aarch64.rs  liveness.rs  mod.rs  x86_64.rs
src/literal/: extractor.rs  mod.rs  prefilter.rs
src/nfa/: glushkov.rs  mod.rs  state.rs  thompson.rs  utf8_automata.rs
src/parser/: ast.rs  lexer.rs  mod.rs
src/simd/: README.md  avx2.rs  fallback.rs  memchr.rs  mod.rs  teddy.rs  tests.rs
src/vm/: codepoint_class.rs  mod.rs
tests/: api.rs  engines.rs  features.rs  patterns.rs  perf_backref.rs  unicode.rs
tests/api/: mod.rs
tests/engines/: mod.rs
tests/features/: backreference.rs  case_insensitive.rs  (+5 more)
(+62 files in other folders)
